added manifest and defintion differences

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -54,12 +54,12 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 	<Card title="🚀 Examples" icon="rocket">
 		See AgentSchema in action with real-world examples including analyst, QnA, and travel agents.
 		
-		[Browse Examples →](/guides/example/)
+		[Getting Started Guide →](/guides/example/)
 	</Card>
 	<Card title="🤝 Contributing" icon="github">
 		Help improve the specification by contributing to the AgentSchema project.
 		
-		[Contributing Guide →](https://github.com/microsoft/AgentSchema/blob/main/README.md#contributing)
+		[Contributing Guide →](https://github.com/sethjuarez/AgentSchema/blob/main/README.md#contributing)
 	</Card>
 </CardGrid>
 
