added final docs details

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -10,7 +10,7 @@ hero:
     alt: AgentSchema network diagram showing connected agents and data flow
   actions:
     - text: Get Started
-      link: /guides/
+      link: guides/
       icon: right-arrow
     - text: View on GitHub
       link: https://github.com/microsoft/AgentSchema
@@ -49,17 +49,17 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 	<Card title="📖 Object Model" icon="document">
 		Explore the complete AgentSchema object model with detailed documentation and examples.
 		
-		[View Documentation →](/reference/)
+		[View Documentation →](reference/)
 	</Card>
 	<Card title="🚀 Examples" icon="rocket">
 		See AgentSchema in action with real-world examples including analyst, QnA, and travel agents.
 		
-		[Getting Started Guide →](/guides/example/)
+		[Getting Started Guide →](guides/example/)
 	</Card>
 	<Card title="🤝 Contributing" icon="github">
 		Help improve the specification by contributing to the AgentSchema project.
-		
-		[Contributing Guide →](https://github.com/sethjuarez/AgentSchema/blob/main/README.md#contributing)
+
+		[Contributing Guide →](https://github.com/microsoft/AgentSchema/blob/main/README.md#contributing)
 	</Card>
 </CardGrid>
 
